Ready for the Multivariate_annalysis

--- a/Static_Notebooks/EDA_Notebook/Univariate_annalysis.ipynb
+++ b/Static_Notebooks/EDA_Notebook/Univariate_annalysis.ipynb
@@ -3999,95 +3999,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 155,
    "id": "b6d485e3-3acf-40b3-9e6e-60bd6405b760",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>society</th>\n",
+       "      <th>sector</th>\n",
+       "      <th>price</th>\n",
+       "      <th>price_per_sqft</th>\n",
+       "      <th>area</th>\n",
+       "      <th>areaWithType</th>\n",
+       "      <th>bedRoom</th>\n",
+       "      <th>bathroom</th>\n",
+       "      <th>balcony</th>\n",
+       "      <th>...</th>\n",
+       "      <th>super_built_up_area</th>\n",
+       "      <th>built_up_area</th>\n",
+       "      <th>carpet_area</th>\n",
+       "      <th>study room</th>\n",
+       "      <th>servant room</th>\n",
+       "      <th>store room</th>\n",
+       "      <th>pooja room</th>\n",
+       "      <th>others</th>\n",
+       "      <th>furnishing_type</th>\n",
+       "      <th>luxury_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>flat</td>\n",
+       "      <td>signature global park 4</td>\n",
+       "      <td>sector 36</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>7585.0</td>\n",
+       "      <td>1081.0</td>\n",
+       "      <td>Super Built up area 1081(100.43 sq.m.)Carpet a...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1081.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>flat</td>\n",
+       "      <td>smart world gems</td>\n",
+       "      <td>sector 89</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>8600.0</td>\n",
+       "      <td>1105.0</td>\n",
+       "      <td>Carpet area: 1103 (102.47 sq.m.)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1103.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>flat</td>\n",
+       "      <td>pyramid elite</td>\n",
+       "      <td>sector 86</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>58228.0</td>\n",
+       "      <td>Carpet area: 58141 (5401.48 sq.m.)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58141.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>flat</td>\n",
+       "      <td>breez global hill view</td>\n",
+       "      <td>sohna road</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>5470.0</td>\n",
+       "      <td>585.0</td>\n",
+       "      <td>Built Up area: 1000 (92.9 sq.m.)Carpet area: 5...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>585.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>flat</td>\n",
+       "      <td>bestech park view sanskruti</td>\n",
+       "      <td>sector 92</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>8020.0</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>Super Built up area 1995(185.34 sq.m.)Built Up...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3+</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>1615.0</td>\n",
+       "      <td>1476.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method NDFrame.head of      property_type                              society      sector  price  \\\n",
-       "0             flat              signature global park 4   sector 36   0.82   \n",
-       "1             flat                     smart world gems   sector 89   0.95   \n",
-       "2             flat                        pyramid elite   sector 86   0.46   \n",
-       "3             flat               breez global hill view  sohna road   0.32   \n",
-       "4             flat          bestech park view sanskruti   sector 92   1.60   \n",
-       "...            ...                                  ...         ...    ...   \n",
-       "3798          flat                       pivotal devaan   sector 84   0.37   \n",
-       "3799         house  international city by sobha phase 1  sector 109   6.00   \n",
-       "3800          flat           ansal api celebrity suites    sector 2   0.60   \n",
-       "3801         house                          independent   sector 43  15.50   \n",
-       "3802          flat                           m3m ikonic   sector 68   1.78   \n",
+       "  property_type                      society      sector  price  \\\n",
+       "0          flat      signature global park 4   sector 36   0.82   \n",
+       "1          flat             smart world gems   sector 89   0.95   \n",
+       "2          flat                pyramid elite   sector 86   0.46   \n",
+       "3          flat       breez global hill view  sohna road   0.32   \n",
+       "4          flat  bestech park view sanskruti   sector 92   1.60   \n",
        "\n",
-       "      price_per_sqft     area  \\\n",
-       "0             7585.0   1081.0   \n",
-       "1             8600.0   1105.0   \n",
-       "2               79.0  58228.0   \n",
-       "3             5470.0    585.0   \n",
-       "4             8020.0   1995.0   \n",
-       "...              ...      ...   \n",
-       "3798          6346.0    583.0   \n",
-       "3799          9634.0   6228.0   \n",
-       "3800          8163.0    735.0   \n",
-       "3801         28233.0   5490.0   \n",
-       "3802          9128.0   1950.0   \n",
+       "   price_per_sqft     area                                       areaWithType  \\\n",
+       "0          7585.0   1081.0  Super Built up area 1081(100.43 sq.m.)Carpet a...   \n",
+       "1          8600.0   1105.0                   Carpet area: 1103 (102.47 sq.m.)   \n",
+       "2            79.0  58228.0                 Carpet area: 58141 (5401.48 sq.m.)   \n",
+       "3          5470.0    585.0  Built Up area: 1000 (92.9 sq.m.)Carpet area: 5...   \n",
+       "4          8020.0   1995.0  Super Built up area 1995(185.34 sq.m.)Built Up...   \n",
        "\n",
-       "                                           areaWithType  bedRoom  bathroom  \\\n",
-       "0     Super Built up area 1081(100.43 sq.m.)Carpet a...        3         2   \n",
-       "1                      Carpet area: 1103 (102.47 sq.m.)        2         2   \n",
-       "2                    Carpet area: 58141 (5401.48 sq.m.)        2         2   \n",
-       "3     Built Up area: 1000 (92.9 sq.m.)Carpet area: 5...        2         2   \n",
-       "4     Super Built up area 1995(185.34 sq.m.)Built Up...        3         4   \n",
-       "...                                                 ...      ...       ...   \n",
-       "3798  Super Built up area 583(54.16 sq.m.)Carpet are...        2         2   \n",
-       "3799                         Plot area 692(578.6 sq.m.)        5         5   \n",
-       "3800               Super Built up area 735(68.28 sq.m.)        1         1   \n",
-       "3801                        Plot area 610(510.04 sq.m.)        5         6   \n",
-       "3802  Super Built up area 1950(181.16 sq.m.)Built Up...        3         3   \n",
+       "   bedRoom  bathroom balcony  ...  super_built_up_area built_up_area  \\\n",
+       "0        3         2       2  ...               1081.0           NaN   \n",
+       "1        2         2       2  ...                  NaN           NaN   \n",
+       "2        2         2       1  ...                  NaN           NaN   \n",
+       "3        2         2       1  ...                  NaN        1000.0   \n",
+       "4        3         4      3+  ...               1995.0        1615.0   \n",
        "\n",
-       "     balcony  ...  super_built_up_area built_up_area carpet_area  study room  \\\n",
-       "0          2  ...               1081.0           NaN       650.0           0   \n",
-       "1          2  ...                  NaN           NaN      1103.0           1   \n",
-       "2          1  ...                  NaN           NaN     58141.0           0   \n",
-       "3          1  ...                  NaN        1000.0       585.0           0   \n",
-       "4         3+  ...               1995.0        1615.0      1476.0           0   \n",
-       "...      ...  ...                  ...           ...         ...         ...   \n",
-       "3798       1  ...                583.0           NaN       483.0           0   \n",
-       "3799      3+  ...                  NaN        6228.0         NaN           1   \n",
-       "3800       1  ...                735.0           NaN         NaN           0   \n",
-       "3801       3  ...                  NaN        5490.0         NaN           1   \n",
-       "3802      3+  ...               1950.0        1845.0      1530.0           0   \n",
+       "  carpet_area  study room  servant room  store room  pooja room  others  \\\n",
+       "0       650.0           0             0           0           0       0   \n",
+       "1      1103.0           1             1           0           0       0   \n",
+       "2     58141.0           0             0           0           0       0   \n",
+       "3       585.0           0             0           0           0       0   \n",
+       "4      1476.0           0             1           0           0       1   \n",
        "\n",
-       "      servant room  store room  pooja room  others  furnishing_type  \\\n",
-       "0                0           0           0       0                1   \n",
-       "1                1           0           0       0                1   \n",
-       "2                0           0           0       0                1   \n",
-       "3                0           0           0       0                1   \n",
-       "4                1           0           0       1                2   \n",
-       "...            ...         ...         ...     ...              ...   \n",
-       "3798             0           0           0       0                1   \n",
-       "3799             1           1           1       0                1   \n",
-       "3800             0           0           0       0                2   \n",
-       "3801             1           1           1       0                1   \n",
-       "3802             0           0           0       0                2   \n",
+       "   furnishing_type  luxury_score  \n",
+       "0                1             8  \n",
+       "1                1            38  \n",
+       "2                1            15  \n",
+       "3                1            49  \n",
+       "4                2           174  \n",
        "\n",
-       "      luxury_score  \n",
-       "0                8  \n",
-       "1               38  \n",
-       "2               15  \n",
-       "3               49  \n",
-       "4              174  \n",
-       "...            ...  \n",
-       "3798            73  \n",
-       "3799           160  \n",
-       "3800            67  \n",
-       "3801            76  \n",
-       "3802           126  \n",
-       "\n",
-       "[3677 rows x 23 columns]>"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
